--- a/src/main/resources/META-INF/jpa-named-queries.properties
+++ b/src/main/resources/META-INF/jpa-named-queries.properties
@@ -1,4 +1,5 @@
 # Lista todas las facturas
 Invoice.findTotalMoreThan = SELECT * FROM invoice WHERE total > :total
+Invoice.updateFromDetail = UPDATE invoice SET total = (SELECT SUM (d.quantity * p.price) FROM detail d JOIN product p ON p.id = d.product_id WHERE d.invoice_id = :invoiceId) WHERE id = :invoiceId
 Product.findStickMin = SELECT * FROM product WHERE stock > :stock
-Client.findClientByPlace = SELECT * FROM client WHERE 
+Detail.sumTotal = SELECT SUM (d.quantity * p.price) FROM detail d JOIN product p ON p.id = d.product_id WHERE d.invoice_id = :invoiceId
